css/main.css
:root{
    --website-yellow: #FFAB00;
    --website-black: #2b2d42;
    --atf-padding: 60px 0 0;
    --section-padding: 120px 0 0;
}

/* general **************************/
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
}
a{
    text-decoration: none;
}
body{
    /* font-family: 'Rubik', sans-serif; */
    /* font-family: 'Amiko', sans-serif; */
    font-family: 'Archivo', sans-serif;
    color: var(--website-black);
}
.container{
    width: 100%;
    max-width: 1180px;
    margin: 0 auto;
    padding: 0 10px;
}
.section_head{
    font-size: 40px;
    font-weight: 700;
    letter-spacing: 2px;
    text-decoration: underline;
    text-decoration-style: dotted;
    text-decoration-color: var(--website-yellow);
    text-transform: uppercase;
}
.section_desc{
    font-size: 20px;
    font-style: italic;
    margin: 10px 0 0;
    line-height: 1.4;
    letter-spacing: 1.2px;
}
.text_highlight{
    color: var(--website-yellow);
}
.text_bold{
    font-weight: 600;
}
.material-symbols-outlined{
    font-size: 60px;
}
.product_icon{
    font-size: 24px;
    margin: 0 0 0 5px;
}
.mobile_btn{
    display: none;
}
.mobile_menu{
    display: none;
}

/* header **************************/
.top_strip{
    padding: 10px;
    text-align: center;
    text-decoration: underline;
    text-decoration-style: dotted;
    /* background-color: var(--website-yellow); */
}
.top_strip_text{
    color: var(--website-black);
    font-weight: 600;
    font-size: 14px;
    font-style: italic;
    letter-spacing: 1px;
}
.main_nav_wrap{
    position: sticky;
    top: 0;
    z-index: 1;
    background-color: #FFFFFF;
}
.main_nav{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 15px 0;
    border-bottom: 1px solid #eeeeee;
}
.logo_text{
    font-size: 30px;
    font-weight: 700;
    background: linear-gradient(to right, #2b2d42 20%, #2b2d42 50%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}
.nav_links{
    /* width: 100%; */
    /* max-width: 600px; */
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 0 20px;
}
.link{
    font-weight: 600;
    font-size: 16px;
    padding: 5px 10px;
    color: var(--website-black);
    text-transform: uppercase;
    cursor: pointer;
}
.link:hover{
    text-decoration: underline;
    text-decoration-style: dotted;
    text-decoration-thickness: 3px;
}
.navLinkActive{
    /* text-decoration: underline;
    text-decoration-style: dotted;
    text-decoration-thickness: 3px; */
    background-color: var(--website-yellow);
    color: #FFFFFF;
}

/* atf **************************/
.atf{
    display: flex;
    justify-content: space-between;
    padding: var(--atf-padding);
}
.atf_left{
    max-width: 500px;
}
.atf_head{
    font-size: 55px;
    margin: 20px 0 60px;
    letter-spacing: 1px;
}
.atf_desc{
    font-size: 20px;
    line-height: 1.4;
    letter-spacing: 1px;
}
.atf-image{
    max-width: 500px;
    border-radius: 50px;
}
.atf_cta_wrap{
    display: inline-block;
    
    border: 1px solid var(--website-black);
}
.atf_cta_wrap:hover{
    background-color: var(--website-yellow);
}
.atf_cta{
    font-size: 20px;
    padding: 20px 30px;
    text-transform: uppercase;
    border: 1px solid;
    transition: 0.3s;
    color: var(--website-black);
}
.atf_cta:hover{
    background-color: var(--website-black);
    color: #ffffff;
    border-radius: 10px;
}

/* product **************************/
.product_wrap{
    /* min-height: 70vh; */
    padding: var(--section-padding);
}
.card_wrap{
    display: flex;
    justify-content: space-between;
    margin: 60px 0 0;
}
.card{
    position: relative;
    max-width: 24%;
    border-radius: 5px;
    display: flex;
    flex-direction: column;
    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
}
.card_img{
    max-width: 100%;
    max-height: 140px;
    object-fit: cover;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}
.card_content{
    padding: 0 20px 15px;
    display: flex;
    flex-direction: column;
    flex: 1 0 auto;
}
.card_head{
    font-size: 20px;
    font-weight: 600;
    margin: 25px 0 0;
    text-transform: uppercase;
}
.card_desc{
    font-size: 17px;
    margin: 15px 0;
    flex: 1 0 auto;
    line-height: 1.4;
    letter-spacing: 1px;
}
.card_cta{
    position: relative;
    display: flex;
    align-items: center;
    cursor: pointer;
    padding: 10px 5px;
    border-radius: 5px;
    color: var(--website-black);
    /* text-decoration: underline;
    text-decoration-style: dotted; */
}
/* .card_cta:hover{
    text-decoration: none;
} */
.product_icon{
    position: absolute;
    transition: 0.3s;
    left: 60px;
}
.card_cta:hover .product_icon{
    animation: move-right 1.2s linear 0s infinite;
}
@keyframes move-right {
    0%{
        left: 60px;
    }
    100%{
        left: 70px;
    }
}
.read_more_btn{
    position: absolute;
    top: 26%;
    right: 10%;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    font-size: 24px;
    transition: 0.3s;
    transform: scale(0.8);
    display: flex;
    align-items: center;
    justify-content: center;
    color: var(--website-black);
    background-color: var(--website-yellow);
}
.read_more_btn:hover{
    transform: scale(1);
}

/* industries **************************/
.industries_wrap{
    /* min-height: 100vh; */
    padding: var(--section-padding);
}
.industries, .services{
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    margin: 60px 0 0;
}
.industries{
    gap: 30px 0;
}
.industry{
    /* flex-basis: 26%; */
    text-align: center;
}
.industry_image{
    max-width: 300px;
    height: 180px;
    border-radius: 5px;
    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
    object-fit: cover;
}
.industry_name, .service_name{
    font-size: 20px;
    margin: 10px 0 0;
}

/* services **************************/
.services_wrap{
    /* min-height: 70vh; */
    padding: var(--section-padding);
}
.service{
    flex-basis: 23%;
    text-align: center;
}
.service_image{
    max-width: 265px;
    max-height: 145px;
    border-radius: 5px;
    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
}
.service_name{
    margin: 10px 0 0;
}

/* advantages **************************/
.advantages{
    min-height: 50vh;
    padding: var(--section-padding);
}
.advs{
    display: flex;
    justify-content: space-between;
    margin: 40px 0 0;
}
.adv{
    text-align: center;
    /* max-width: 20%; */
}
.adv_text{
    max-width: 200px;
    font-size: 20px;
    margin: 10px 0 0;
    letter-spacing: 1.2px;
    line-height: 1.2;
}
.footer{
    padding: 20px 0;
    background-color: var(--website-black);
}
.footer_elems{
    display: flex;
    justify-content: space-between;
}
.copyright, .location{
    color: #FFFFFF;
}
.location{
    text-decoration: underline;
    text-decoration-style: dotted;
}
.contact{
    white-space: nowrap;
}
.contact-name{
    color: var(--website-yellow);
}
.number{
    color: var(--website-yellow);
    text-decoration: underline;
    text-decoration-style: dotted;
}

/* about **************************/
.hero{
    min-height: 30vh;
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--website-yellow);
}
.hero_text{
    font-size: 32px;
    font-weight: 700;
    font-style: italic;
    text-transform: uppercase;
}
.about_text{
    font-size: 20px;
    margin: 30px 0 0;
    line-height: 1.4;
    letter-spacing: 1px;
    color: var(--website-black);
    text-align: center;
}
.about_advs .section_head{
    font-size: 26px;
}

@media only screen and (max-width: 1023px){
    .atf_wrap{
        min-height: auto;
    }
    .atf_head{
        font-size: 45px;
        line-height: 1.3;
    }
    .logo_text{
        font-size: 28px;
    }
    .link{
        font-size: 14px;
    }
}

@media only screen and (max-width: 790px){
    .atf{
        flex-direction: column;
        align-items: center;
        text-align: center;
        padding: 40px 0 0;
    }
    .atf_left{
        max-width: 600px;
    }
    .atf_head{
        font-size: 30px;
        margin: 0 0 60px;
    }
    .atf-image{
        margin: 40px 0 0;
    }
    .section_head{
        font-size: 30px;
    }
    .section_desc{
        font-size: 16px;
        max-width: 600px;
        margin: 10px auto 0;
    }
    .section_desc, .section_head{
        text-align: center;
    }
    .card_wrap{
        flex-wrap: wrap;
        gap: 30px 0;
    }
    .card{
        max-width: 48%;
    }
    .industries_wrap{
        min-height: auto;
    }
    .industry_name, .service_name{
        font-size: 16px;
    }
    .services_wrap{
        padding: 90px 0 0;
    }
    .service_name{
        margin: 5px 0 0;
    }
    .advantages{
        padding: 70px 0 0;
    }
    .material-symbols-outlined{
        font-size: 40px;
    }
    .adv_text{
        font-size: 16px;
    }
    .nav_links{
        display: none;
    }
    .mobile_btn{
        display: flex;
        flex-direction: column;
        transition: 0.3s;
        gap: 5px 0;
    }
    .mobile_menu{
        position: absolute;
        flex-direction: column;
        align-items: center;
        gap: 20px 0;
        width: 100vw;
        padding: 20px 0;
        height: 0;
        transition: 0.3s;
        display: none;
        background-color: #FFFFFF;
        box-shadow: 0px 15px 10px -15px #111;
        /* z-index: 2; */
    }
    .menuActive{
        display: flex;
        height: 186px;
    }
    .tube{
        height: 4px;
        width: 26px;
        border-radius: 2px;
        transition: 0.3s ease-out;
        background-color: var(--website-black);
    }
    .tubeActive .tube_one{
        transform: rotate(45deg) translateY(2px) translateX(1.5px);
    }
    .tubeActive .tube_two{
        transform: rotate(-45deg) translateY(-5px) translateX(4px);
    }
    .tubeActive .tube_three{
        display: none;
    }
    .logo_text{
        font-size: 24px;
    }
    .mob_link{
        font-size: 20px;
        color: var(--website-black);
    }
}

@media only screen and (max-width: 550px){
    .atf_left{
        max-width: 400px;
    }
    .atf_head{
        font-size: 24px;
        margin: 0 0 40px;
    }
    .atf_cta{
        font-size: 16px;
        padding: 14px 26px;
    }
    .atf-image{
        margin: 30px 0 0;
        max-width: 350px;
    }
    .section_head{
        font-size: 22px;
    }
    .section_desc, .adv_text{
        font-size: 16px;
    }
    .card_head{
        font-size: 20px;
    }
    .card_desc{
        font-size: 16px;
    }
    .industries, .services{
        justify-content: center;
        gap: 30px;
    }
    .industry_image, .service_image{
        max-width: 300px;
    }
    .industry_name, .service_name{
        margin: 10px 0 0;
        font-size: 18px;
    }
}

@media only screen and (max-width: 410px){
    .top_strip_text{
        font-size: 11px;
    }
    .main_nav{
        margin: 0 20px;
    }
    .logo_text{
        font-size: 24px;
    }
    .atf_head{
        font-size: 28px;
    }
    .atf_cta{
        font-size: 14px;
        padding: 12px 20px;
    }
    .atf-image{
        max-width: 300px;
    }
    .section_head{
        font-size: 30px;
    }
    .product_wrap{
        padding: 90px 0 0;
    }
    .card{
        max-width: 100%;
    }
    .industry, .service{
        text-align: center;
    }
    .hero{
        min-height: 20vh;
    }
    .hero_text{
        font-size: 24px;
    }
    .about_text{
        font-size: 16px;
        line-height: 1.6;
    }
    .advantages{
        padding: 70px 0;
    }
    .advs{
        gap: 20px 0;
        justify-content: center;
        flex-wrap: wrap;
    }
    .adv{
        max-width: 150px;
    }
    .footer{
        padding: 20px 10px;
    }
    .footer_elems{
        font-size: 14px;
    }
}

